# ai-camp-4nd-llm-agent-service-project-4th_-law_law-3-team

./: .coderabbit.yaml  .dockerignore  .env.docker.example  .env.example  .gitignore  ANALYSIS_REPORT.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  CLAUDE.md  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_legal_documents_table.py  002_add_laws_and_references_tables.py  003_add_lancedb_tables.py  004_add_lawyers_table.py  005_add_trial_statistics_table.py  006_add_legal_terms_table.py
backend/app/: main.py
backend/app/common/: __init__.py  agent_base.py  agent_router.py  chat_service.py  database.py  graph_service.py  vectorstore.py
backend/app/core/: config.py  context.py  errors.py  logging.py  registry.py
backend/app/models/: __init__.py  law.py  law_document.py  lawyer.py  legal_document.py  legal_reference.py  legal_term.py  precedent_document.py  trial_statistics.py
backend/app/multi_agent/: __init__.py  executor.py  graph.py  nodes.py  orchestrator.py  router.py  state.py
backend/app/services/: __init__.py
backend/app/tools/: __init__.py
backend/docs/: CODING_STANDARDS_FIXES.md
backend/evaluation/: CLAUDE.md  __init__.py  __main__.py  config.py  schemas.py
backend/evaluation/datasets/: eval_queries.yaml
backend/evaluation/experiments/: .gitkeep
backend/evaluation/metrics/: __init__.py  generation.py  rag.py  retrieval.py
backend/evaluation/reports/: __init__.py  report_generator.py
backend/evaluation/runners/: __init__.py  evaluation_runner.py  experiment_tracker.py
backend/evaluation/tools/: __init__.py  dataset_builder.py  solar_generator.py  test_solar_api.py  validate_dataset.py
backend/evaluation/ui/: __init__.py  dataset_editor.py  experiment_viewer.py  gradio_app.py  search_analyzer.py
backend/notebooks/: colab_lancedb_embeddings.ipynb  runpod_lancedb_embeddings.ipynb
backend/scripts/: CLAUDE.md  add_module.py  backup_data.py  build_graph.py  colab_lancedb_embeddings.py  crawl_lawyer_specialties.py  create_embeddings.py  create_lancedb_embeddings.py  download_models.py  geocode_lawyers.py  import_json_to_db.py  informal_abbreviations.json  load_lancedb_data.py  load_lawyers_data.py  load_legal_data.py  load_legal_terms_data.py  load_trial_statistics_data.py  local_lancedb_embeddings.py  runpod_lancedb_embeddings.py  runpod_split_embeddings.py  test_precedent_embedding.py  update_population.py  validate_data.py  verify_gradio.py  verify_graph.py
backend/scripts/embedding_common/: __init__.py  cache.py  chunking.py  config.py  device.py  memory.py  model.py  schema.py  store.py  (+1 more)
backend/tests/: conftest.py
(+299 files in other folders)
